--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seam",
-  "description": "Attach JS behavior to your HTML in a universal way with declarative binding",
+  "description": "Seam binds your JS logic to the DOM by adding configuration to the markup.",
   "version": "0.0.2",
   "homepage": "https://github.com/flams/seam",
   "licenses": [
